--- a/Windows XP Embedded/gtk-3.20/gtk.css
+++ b/Windows XP Embedded/gtk-3.20/gtk.css
@@ -158,21 +158,21 @@ button:link, button:visited {
     text-decoration-line: underline; }
 
 button {
-  padding: 6px 6px;
-  border-style: solid;
-  border-width: 1px;
+  padding: 6px;
+  border: 1px solid #3d5571;
   border-radius: 2px;
   color: #000000;
-  border-color: #3d5571;
   background-color: #EBE9ED;
   background-image: linear-gradient(to bottom, #fcfcfc 0%, #ebebeb 50%, #dddddd 51%, #aeaeae 100%);
   box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15);
   -gtk-outline-radius: 2px; }
-  button:hover, button:focus {
+  button:hover {
     box-shadow: inset 0 0 1px 2px #ffc73c;
     border-color: #3d5a7a; }
+  button:focus {
+    box-shadow: inset 0 0 1px 2px #6982ee; }
   button:active, button:checked {
-    border-color: #3f3e41;
+    border-color: shade(#d4d0d7, 0.3);
     background-color: #dfdce2;
     background-image: linear-gradient(to bottom, #949494, #adadad, #b9b9b9); }
     button:active:disabled, button:checked:disabled {
@@ -966,10 +966,9 @@ menu, .menu {
   color: #000000;
   background-color: #FFFFFF; }
   .csd menu, .csd .menu {
-    padding: 4px 4px;
+    padding: 4px 0px;
     border-radius: 0px;
-    border: 3px solid transparent;
-    border-image: url("assets/menu-bg.png") 3 3 3 3; }
+    border: none; }
   menu > arrow, .menu > arrow {
     padding: 4px;
     border-color: transparent;
@@ -991,14 +990,9 @@ menubar, .menubar {
   border-style: none;
   background-color: #EBE9ED;
   color: #000000;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-bottom-color: #d8d2bd;
-  border-top-style: solid;
-  border-top-width: 1px;
-  border-top-color: #ffffff;
-  padding: 0px 2px 1px 2px;
-  box-shadow: inset 1px -0.5px 2px -1px rgba(81, 81, 77, 0.2); }
+  border-top: 1px solid white;
+  border-bottom: 1px solid #d6d5d9;
+  padding: 0px 2px 1px 2px; }
   menubar:backdrop, .menubar:backdrop {
     color: #000000;
     background-color: #EBE9ED; }
@@ -2009,9 +2003,10 @@ headerbar {
 
 toolbar {
   padding: 4px;
-  border: none;
   color: #000000;
-  background-color: #EBE9ED; }
+  background-color: #EBE9ED;
+  border-top: 1px solid white;
+  border-bottom: 1px solid #d6d5d9; }
   toolbar:backdrop {
     color: #000000;
     background-color: #EBE9ED; }
@@ -2041,40 +2036,6 @@ toolbar {
   toolbar menubar {
     -GtkToolbar-button-relief: normal; }
 
-.primary-toolbar {
-  -GtkWidget-window-dragging: true;
-  border-width: 1px 0 2px 0;
-  border-style: groove;
-  border-color: #d4d0d7;
-  padding: 0px 2px 1px 2px;
-  box-shadow: inset 1px -0.5px 2px -1px rgba(81, 81, 77, 0.2); }
-  .primary-toolbar button, .primary-toolbar .raised button {
-    padding: 6px 6px;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 2px;
-    color: #000000;
-    border-color: #3d5571;
-    background-color: #EBE9ED;
-    background-image: linear-gradient(to bottom, #fcfcfc 0%, #ebebeb 50%, #dddddd 51%, #aeaeae 100%);
-    box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15);
-    -gtk-outline-radius: 2px; }
-    .primary-toolbar button:hover, .primary-toolbar button:focus, .primary-toolbar .raised button:hover, .primary-toolbar .raised button:focus {
-      box-shadow: inset 0 0 1px 2px #ffc73c;
-      border-color: #3d5a7a; }
-    .primary-toolbar button:active, .primary-toolbar button:checked, .primary-toolbar .raised button:active, .primary-toolbar .raised button:checked {
-      border-color: #3f3e41;
-      background-color: #dfdce2;
-      background-image: linear-gradient(to bottom, #949494, #adadad, #b9b9b9); }
-      .primary-toolbar button:active:disabled, .primary-toolbar button:checked:disabled, .primary-toolbar .raised button:active:disabled, .primary-toolbar .raised button:checked:disabled {
-        color: #121212;
-        border-color: #706f71;
-        background-color: #c9c6cc; }
-    .primary-toolbar button:disabled, .primary-toolbar .raised button:disabled {
-      color: #767577;
-      border-color: #9f98a5;
-      background-color: #dfdde1; }
-
 .inline-toolbar {
   padding: 1px;
   border-width: 1px;
@@ -2086,21 +2047,21 @@ toolbar {
     border-color: #d4d0d7;
     background-color: #EBE9ED; }
   .inline-toolbar toolbutton > button {
-    padding: 6px 6px;
-    border-style: solid;
-    border-width: 1px;
+    padding: 6px;
+    border: 1px solid #3d5571;
     border-radius: 2px;
     color: #000000;
-    border-color: #3d5571;
     background-color: #EBE9ED;
     background-image: linear-gradient(to bottom, #fcfcfc 0%, #ebebeb 50%, #dddddd 51%, #aeaeae 100%);
     box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15);
     -gtk-outline-radius: 2px; }
-    .inline-toolbar toolbutton > button:hover, .inline-toolbar toolbutton > button:focus {
+    .inline-toolbar toolbutton > button:hover {
       box-shadow: inset 0 0 1px 2px #ffc73c;
       border-color: #3d5a7a; }
+    .inline-toolbar toolbutton > button:focus {
+      box-shadow: inset 0 0 1px 2px #6982ee; }
     .inline-toolbar toolbutton > button:active, .inline-toolbar toolbutton > button:checked {
-      border-color: #3f3e41;
+      border-color: shade(#d4d0d7, 0.3);
       background-color: #dfdce2;
       background-image: linear-gradient(to bottom, #949494, #adadad, #b9b9b9); }
       .inline-toolbar toolbutton > button:active:disabled, .inline-toolbar toolbutton > button:checked:disabled {
@@ -2967,21 +2928,21 @@ panel-toplevel.background na-tray-applet {
   #XfceNotifyWindow.osd label#summary {
     font-weight: bold; }
   #XfceNotifyWindow.osd button {
-    padding: 6px 6px;
-    border-style: solid;
-    border-width: 1px;
+    padding: 6px;
+    border: 1px solid #3d5571;
     border-radius: 2px;
     color: #000000;
-    border-color: #3d5571;
     background-color: #EBE9ED;
     background-image: linear-gradient(to bottom, #fcfcfc 0%, #ebebeb 50%, #dddddd 51%, #aeaeae 100%);
     box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15);
     -gtk-outline-radius: 2px; }
-    #XfceNotifyWindow.osd button:hover, #XfceNotifyWindow.osd button:focus {
+    #XfceNotifyWindow.osd button:hover {
       box-shadow: inset 0 0 1px 2px #ffc73c;
       border-color: #3d5a7a; }
+    #XfceNotifyWindow.osd button:focus {
+      box-shadow: inset 0 0 1px 2px #6982ee; }
     #XfceNotifyWindow.osd button:active, #XfceNotifyWindow.osd button:checked {
-      border-color: #3f3e41;
+      border-color: shade(#d4d0d7, 0.3);
       background-color: #dfdce2;
       background-image: linear-gradient(to bottom, #949494, #adadad, #b9b9b9); }
       #XfceNotifyWindow.osd button:active:disabled, #XfceNotifyWindow.osd button:checked:disabled {
