--- a/Windows XP Metallic/gtk-3.20/gtk.css
+++ b/Windows XP Metallic/gtk-3.20/gtk.css
@@ -158,19 +158,19 @@ button:link, button:visited {
     text-decoration-line: underline; }
 
 button {
-  padding: 6px 6px;
-  border-style: solid;
-  border-width: 1px;
+  padding: 6px;
+  border: 1px solid #57565f;
   border-radius: 2px;
   color: #000000;
-  border-color: #57565f;
   background-color: #E6E6ED;
   background-image: linear-gradient(to bottom, #fff, #f1f4fb 25%, #e8eaf6 50%, #d9dbe8 75%, #cccbd9 95%);
-  -gtk-outline-radius: 2px;
-  box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15); }
-  button:hover, button:focus {
+  box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15);
+  -gtk-outline-radius: 2px; }
+  button:hover {
     box-shadow: inset 0 0 1px 2px #ffc73c;
     border-color: #5c5b64; }
+  button:focus {
+    box-shadow: inset 0 0 1px 2px #6982ee; }
   button:active, button:checked {
     border-color: shade(#ccccd9, 0.3);
     background-color: #d9d9e3;
@@ -990,14 +990,9 @@ menubar, .menubar {
   border-style: none;
   background-color: #E6E6ED;
   color: #000000;
-  border-bottom-style: solid;
-  border-bottom-width: 1px;
-  border-bottom-color: #d8d2bd;
-  border-top-style: solid;
-  border-top-width: 1px;
-  border-top-color: #ffffff;
-  padding: 0px 2px 1px 2px;
-  box-shadow: inset 1px -0.5px 2px -1px rgba(81, 81, 77, 0.2); }
+  border-top: 1px solid white;
+  border-bottom: 1px solid #d8d2bd;
+  padding: 0px 2px 1px 2px; }
   menubar:backdrop, .menubar:backdrop {
     color: #000000;
     background-color: #E6E6ED; }
@@ -2008,9 +2003,10 @@ headerbar {
 
 toolbar {
   padding: 4px;
-  border: none;
   color: #000000;
-  background-color: #E6E6ED; }
+  background-color: #E6E6ED;
+  border-top: 1px solid white;
+  border-bottom: 1px solid #d8d2bd; }
   toolbar:backdrop {
     color: #000000;
     background-color: #E6E6ED; }
@@ -2040,40 +2036,6 @@ toolbar {
   toolbar menubar {
     -GtkToolbar-button-relief: normal; }
 
-.primary-toolbar {
-  -GtkWidget-window-dragging: true;
-  border-width: 1px 0 2px 0;
-  border-style: groove;
-  border-color: #ccccd9;
-  padding: 0px 2px 1px 2px;
-  box-shadow: inset 1px -0.5px 2px -1px rgba(81, 81, 77, 0.2); }
-  .primary-toolbar button, .primary-toolbar .raised button {
-    padding: 6px 6px;
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 2px;
-    color: #000000;
-    border-color: #57565f;
-    background-color: #E6E6ED;
-    background-image: linear-gradient(to bottom, #fff, #f1f4fb 25%, #e8eaf6 50%, #d9dbe8 75%, #cccbd9 95%);
-    -gtk-outline-radius: 2px;
-    box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15); }
-    .primary-toolbar button:hover, .primary-toolbar button:focus, .primary-toolbar .raised button:hover, .primary-toolbar .raised button:focus {
-      box-shadow: inset 0 0 1px 2px #ffc73c;
-      border-color: #5c5b64; }
-    .primary-toolbar button:active, .primary-toolbar button:checked, .primary-toolbar .raised button:active, .primary-toolbar .raised button:checked {
-      border-color: shade(#ccccd9, 0.3);
-      background-color: #d9d9e3;
-      background-image: linear-gradient(to bottom, shade(#f5f5f5, 0.6), shade(#f5f5f5, 0.7), shade(#f5f5f5, 0.75)); }
-      .primary-toolbar button:active:disabled, .primary-toolbar button:checked:disabled, .primary-toolbar .raised button:active:disabled, .primary-toolbar .raised button:checked:disabled {
-        color: #111112;
-        border-color: #6e6e71;
-        background-color: #c3c3cc; }
-    .primary-toolbar button:disabled, .primary-toolbar .raised button:disabled {
-      color: #737377;
-      border-color: #9393a8;
-      background-color: #dbdbe1; }
-
 .inline-toolbar {
   padding: 1px;
   border-width: 1px;
@@ -2085,19 +2047,19 @@ toolbar {
     border-color: #ccccd9;
     background-color: #E6E6ED; }
   .inline-toolbar toolbutton > button {
-    padding: 6px 6px;
-    border-style: solid;
-    border-width: 1px;
+    padding: 6px;
+    border: 1px solid #57565f;
     border-radius: 2px;
     color: #000000;
-    border-color: #57565f;
     background-color: #E6E6ED;
     background-image: linear-gradient(to bottom, #fff, #f1f4fb 25%, #e8eaf6 50%, #d9dbe8 75%, #cccbd9 95%);
-    -gtk-outline-radius: 2px;
-    box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15); }
-    .inline-toolbar toolbutton > button:hover, .inline-toolbar toolbutton > button:focus {
+    box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15);
+    -gtk-outline-radius: 2px; }
+    .inline-toolbar toolbutton > button:hover {
       box-shadow: inset 0 0 1px 2px #ffc73c;
       border-color: #5c5b64; }
+    .inline-toolbar toolbutton > button:focus {
+      box-shadow: inset 0 0 1px 2px #6982ee; }
     .inline-toolbar toolbutton > button:active, .inline-toolbar toolbutton > button:checked {
       border-color: shade(#ccccd9, 0.3);
       background-color: #d9d9e3;
@@ -2966,19 +2928,19 @@ panel-toplevel.background na-tray-applet {
   #XfceNotifyWindow.osd label#summary {
     font-weight: bold; }
   #XfceNotifyWindow.osd button {
-    padding: 6px 6px;
-    border-style: solid;
-    border-width: 1px;
+    padding: 6px;
+    border: 1px solid #57565f;
     border-radius: 2px;
     color: #000000;
-    border-color: #57565f;
     background-color: #E6E6ED;
     background-image: linear-gradient(to bottom, #fff, #f1f4fb 25%, #e8eaf6 50%, #d9dbe8 75%, #cccbd9 95%);
-    -gtk-outline-radius: 2px;
-    box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15); }
-    #XfceNotifyWindow.osd button:hover, #XfceNotifyWindow.osd button:focus {
+    box-shadow: inset 0 0 3px 0px rgba(0, 0, 0, 0.15);
+    -gtk-outline-radius: 2px; }
+    #XfceNotifyWindow.osd button:hover {
       box-shadow: inset 0 0 1px 2px #ffc73c;
       border-color: #5c5b64; }
+    #XfceNotifyWindow.osd button:focus {
+      box-shadow: inset 0 0 1px 2px #6982ee; }
     #XfceNotifyWindow.osd button:active, #XfceNotifyWindow.osd button:checked {
       border-color: shade(#ccccd9, 0.3);
       background-color: #d9d9e3;
